syntax = "proto3";

message Submit {
    uint64 id = 1;
    int32 account = 2;
    int32 company = 3;
    string spid = 4;
    string spcode = 5;
    string phone = 6;
    int32 msgfmt = 7;
    int32 length = 8;
    bytes content = 9;
}

message Report {
    uint64 id = 1;
    int32 account = 2;
    int32 company = 3;
    string spcode = 4;
    string phone = 5;
    int32 status = 6;
    string submitTime = 7;
    string doneTime = 8;
}

message Deliver {
    uint64 id = 1;
    int32 account = 2;
    int32 company = 3;
    string phone = 4;
    string spcode = 5;
    string serviceId = 6;
    int32 msgfmt = 7;
    int32 length = 8;
    bytes content = 9;
}

message Message {
    uint64 id = 1;
    string spid = 2;
    string spcode = 3;
    string phone = 4;
    int32 msgfmt = 5;
    int32 length = 6;
    bytes content = 7;
    int32 channel = 8;
}
